--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,17 +24,13 @@ en:
   full_site: "Полная версия сайта"
   mobile_site: "Мобильная версия сайта"
   main:
-    start_teleporting_today: "Начните телепортировать посылки уже сегодня"
-    small_about: "Teleport открывает новые возможности для логистики, электронной коммерции и
-                            управления поставками. Мы – агрегатор служб доставки, который работает во всем мире."
-    get_started: "Зарегистрируйтесь!"
+    start_teleporting_today: "Мы самая охуенная юридическая компания"
+    small_about: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
   menu:
     about_us: "О нас"
-    how_it_works: "Как это работает?"
-    whom_is_our_service_for: "Для кого наш сервис?"
-    for_stores: "Для магазинов"
-    for_delivery_companies: "Для служб доставки"
-    delivery_for_all: "Доставка для всех"
+    whom_is_our_service_for: "Что мы делаем?"
+    for_startups: "Для Стартапов и IT компаний"
+    pricing: "Сколько это стоит?"
     blog: "Блог"
     contact_us: "Контакты"
     language: "Язык"
@@ -42,19 +38,18 @@ en:
     terms_of_use: "ОФЕРТА"
     about_us_f: "О НАС"
     contact_us_f: "КОНТАКТЫ"
-    saas: "SaaS"
   contact:
     get_social: "Мы в социальных сетях"
     say_hello: "Свяжитесь с нами!"
     contact: "Контакты"
-    contact_text: "Нам нравится общаться с новыми, интересными людьми. Напишите нам или позвоните – мы ответим на все Ваши вопросы."
+    contact_text: "Хотите получить бесплатную юридическую консультацию - Напишите нам"
   blog:
     categories: "Категории"
     created_at: "Created at"
     all: "Все"
     news: "Новости"
     specials: "Акции"
-    teleport_saas_system: "Teleport SaaS System"
+    analytics: "Статьи"
     companies_news: "Новости компаний"
     latest_news: "Последние новости"
     new_blog: "Новая новость"
@@ -62,9 +57,6 @@ en:
     content: "Контент"
     language: "Язык"
     content_type: "Категория"
-  all:
-    sign_up_now: "Зарегистрироваться!"
-    do_you_want_to_work_with_us: "Хотите работать с нами?"
   button:
     delete: "Удалить"
     show: "Показать"
@@ -96,16 +88,12 @@ en:
     new: "Новая рассылка"
     edit: "Редактировать рассылку"
     created_at: "Создано"
-    subject_news: "Новости от Teleport"
-    subject_specials: "Акции от Teleport"
-    subject_saas_news: "Новости о Teleport SaaS System"
+    subject_news: "Новости"
+    subject_specials: "Акции"
+    analytics: "Статьи"
     subject_companies_news: "Новости компаний"
-  charts:
-    orders_by_date: "Заказы по дням"
-    orders: "Заказы"
-    profit: "Прибыль"
   content:
     about_service: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
     privacy_and_security: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
     terms_of_use: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-
+    for_startups: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
