--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,7 +107,9 @@ en:
     advanced_cost: "47"
     pro_cost: "147"
     enterprise_cost: "199"
-    month: "month"
-    year: "year"
+    month: "/ month"
+    year: "/ year"
     usd: "$"
     uah: "грн"
+    currency: "$"
+    select: "Select plan"
