--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -100,8 +100,8 @@ ua:
     phone: "Телефон"
     content: "Content"
     company_name: "Law Assistant LLC"
-    phone: "+38 044 384 4160 | +38 067 466 9359"
-    address: "Украина, Киев, ул. Академика Крымского, 27А"
+    phone_c: "+38 044 384 4160 | +38 067 466 9359"
+    address_c: "Украина, Киев, ул. Академика Крымского, 27А"
   content:
     about_service: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
     privacy_and_security: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
