--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,8 +24,8 @@ ru:
   full_site: "Полная версия сайта"
   mobile_site: "Мобильная версия сайта"
   main:
-    start_teleporting_today: "Мы самая крутая юридическая компания"
-    small_about: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+    start_teleporting_today: "Мы юридическая и бухгалтерская аутсорсинговая компания специализируящаяся на IT секторе"
+    small_about: "Совет юриста, который предупредит наступление неприятностей всегда обходиться дешевле, чем любые юридические меры помогающие выпутаться из них."
   menu:
     about_us: "О нас"
     whom_is_our_service_for: "Что мы делаем?"
@@ -106,20 +106,22 @@ ru:
     phone_c: "+38 044 384 4160 | +38 067 466 9359"
     address_c: "Украина, Киев, ул. Академика Крымского, 27А"
   content:
-    about_service: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+    about_service: "Мы юридическая консалтинговая компания с ориентацией на клиентов из IT индустрии. Наши услуги подойдут как начинающим специалистам, так и специалистам со стажем, желающим организовать и обезопасить свой бизнес."
     privacy_and_security: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
     terms_of_use: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-    for_startups: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+    for_startups: "Разработка внешних и внутренних договоров компании (с заказчиками, аутсорсерами, фрилансерами, CEO, CTO, адвайзерами etc.) Консультации в области привлечения инвестиций. Legal Due-diligence. Помощь при привлечении инвестиций, подготовка компании к продаже. Помощь в выборе и разработка лицензионных соглашений."
     pricing: "Pay as you grow"
+    law_outsorsing: "Юридический аутсорсинг"
   pricing:
+    individual: "У нас есть индивидуальные тарифы для Вас"
     beginer: "Beginner"
     advanced: "Advanced"
     pro: "Pro"
     enterprise: "Enterprise"
-    beginer_cost: "0"
-    advanced_cost: "47"
-    pro_cost: "147"
-    enterprise_cost: "199"
+    beginer_cost: "300"
+    advanced_cost: "600"
+    pro_cost: "1200"
+    enterprise_cost: "2500"
     month: "/ month"
     year: "/ year"
     usd: "$"
